# bijou

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md
docs/: CMakeLists.txt  Doxyfile.in  doxygen-mainpage.dox
examples/: CMakeLists.txt  apint_example.cpp
include/bijou/: APFixedPoint.hpp  APFloat.hpp  APInt.hpp  APSInt.hpp  Compiler.hpp  Error.hpp  FloatingPointMode.hpp  Hashing.hpp  MathExtras.hpp  SwapByteOrder.hpp  bijou-config.h.cmake
lib/bijou/: APFixedPoint.cpp  APFloat.cpp  APInt.cpp  APSInt.cpp  Error.cpp  Hashing.cpp
unittests/: APFixedPointTest.cpp  APFloatTest.cpp  APIntTest.cpp  APSIntTest.cpp  ErrorTest.cpp  bijou_unittest_helpers.hpp
